View isnt working,Everything else is complete

--- a/index.html
+++ b/index.html
@@ -34,41 +34,27 @@
                 <select id="selectColor">
                     <option value="" disabled selected hidden>Color</option> 
                 </select>
+                <input type="text" name="" id="selectImg">
 
-                <button type="submit">Add to Garage</button>
+                <button type="submit" id="add">Add to Garage</button>
             </fieldset>
         </div>
 
         <div class="carList">
             <h2>Car Garage:</h2>
-            <ul>
-                <li>
-                    <p>Example</p>
-                    <p>remove</p>
-                </li>
-                <li>
-                    <p>Example</p>
-                </li>
-                <li>
-                    <p>Example</p>
-                </li>
-                <li>
-                    <p>Example</p>
-                </li>
-            </ul>
+            <ul id="carGarage"></ul>
         </div>
     </section>
 
 
     <div class="carResults">
-
+        <img src="/img/r.jpg" alt="">
     </div>
 
 
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="carData.js"></script>
     <script src="main.js"></script>
 </body>
 
